# tempor

./: .coveragerc  .dockerignore  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: build-on-push.yml  publish-to-pypi-testing.yml  publish-to-pypi.yml
config/: config.yml
examples/ansible/: ansible.cfg
examples/ansible/collections/ansible_collections/community/general/: FILES.json
examples/ansible/collections/ansible_collections/community/mysql/: FILES.json
examples/ansible/group_vars/: all
examples/ansible/roles/configurations/files/: tmux.conf
examples/ansible/roles/firewall/tasks/: ip4tables.yml
examples/ansible/roles/geerlingguy.pip/meta/: .galaxy_install_info
examples/packer/: aws-ubuntu.pkr.hcl
providers/digitalocean/: data-sources.tf  main.tf  output.tf  versions.tf
providers/linode/: versions.tf
providers/vultr/: versions.tf
tempor/: VERSION  __init__.py  __main__.py  ansible.py  cli.py  console.py  constant.py  constants.py  exceptions.py  packer.py  playbook.py  ssh.py  terraform.py  tf.py  utils.py  workspaces.py
tempor/apis/: __init__.py  api.py  aws.py  azure.py  digitalocean.py  gcp.py  helpers.py  linode.py  vultr.py
tempor/config/: config.yml  schema.yml
tempor/playbooks/: ansible.cfg  bare.yml  full.yml  inventory  main.yml  minimal.yml
tempor/playbooks/artifacts/0ed2eaa0-2a36-45ce-944e-05c9f6fa8a9c/: command  stdout
tempor/playbooks/artifacts/0ed2eaa0-2a36-45ce-944e-05c9f6fa8a9c/job_events/: 1-4115d641-5359-4bc3-9d3e-2489a25bf7b5.json  2-0bf2d6d9-b0ee-4a34-8522-592d4aa8a6e5.json  3-00d8619c-d37a-346a-c3b0-000000000006.json  4-00d8619c-d37a-346a-c3b0-000000000094.json  5-1a9ba09e-12b7-46da-8534-67818b5540ce.json  6-57f94e4f-1cac-40f2-b5ff-aebaedffe20f.json  7-344fdeee-5135-4d4f-bcf6-97292ad43dc0.json  8-d7662907-d0cf-4f94-8b94-9455bdba59b4.json
tempor/playbooks/collections/ansible_collections/community/crypto/: FILES.json  MANIFEST.json
tempor/playbooks/collections/ansible_collections/community/general/: MANIFEST.json
tempor/playbooks/collections/ansible_collections/community/general/tests/unit/: requirements.txt
tempor/playbooks/collections/ansible_collections/community/mysql/: MANIFEST.json
tempor/playbooks/collections/ansible_collections/devsec/hardening/: FILES.json  MANIFEST.json
tempor/playbooks/collections/ansible_collections/kewlfft/aur/: FILES.json  MANIFEST.json
tempor/playbooks/group_vars/: all
tempor/playbooks/roles/configurations/files/: vimrc  zshrc
tempor/playbooks/roles/configurations/tasks/: main.yml
tempor/playbooks/roles/dev-sec.os-hardening/meta/: .galaxy_install_info
tempor/playbooks/roles/dev-sec.ssh-hardening/meta/: .galaxy_install_info
tempor/playbooks/roles/firewall/tasks/: ip6tables.yml  main.yml
tempor/playbooks/roles/geerlingguy.docker/meta/: .galaxy_install_info
tempor/playbooks/roles/geerlingguy.pip/meta/: .galaxy_install_info
tempor/playbooks/roles/kewlfft.aur/meta/: .galaxy_install_info
tempor/providers/aws/: data-sources.tf  main.tf  output.tf  routing.tf  security_groups.tf  variables.tf  versions.tf  vpc.tf
tempor/providers/azure/: main.tf  output.tf  variables.tf  versions.tf
tempor/providers/digitalocean/: main.tf  variables.tf  versions.tf
tempor/providers/digitalocean/files/: cloud-init.yml
tempor/providers/gcp/: main.tf  output.tf  variables.tf  versions.tf
tempor/providers/linode/: data-sources.tf  main.tf  output.tf  variables.tf  versions.tf
tempor/providers/vultr/: main.tf  output.tf  variables.tf  versions.tf
tests/: test_config.py
