[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tempor"
authors = [
    {name = "Wh1t3Fox", email = "dev@exploit.design"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.6"
dynamic = ["version", "description"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
        "ansible==5.7.0",
        "appdirs==1.4.4",
        "ansible_runner==2.2.0",
        "jsonschema==4.5.1",
        "python-terraform==0.10.1",
        "rich==12.4.1",
        "ssh-config==0.1.1",
        "PyYAML==6.0",
        "boto3==1.23.1",
        "requests==2.27.1",
        "google-api-python-client==2.47.0"
]

[project.urls]
Documentation = "https://github.com/Wh1t3Fox/tempor"
Source = "https://github.com/Wh1t3Fox/tempor"

[project.scripts]
tempor = "tempor.__main__:main"
