[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tempor"
authors = [
    {name = "Wh1t3Fox", email = "dev@exploit.design"}
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.11"
dynamic = ["version", "description"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
]
dependencies = [
        "ansible==11.4.0",
        "appdirs==1.4.4",
        "ansible_runner==2.4.1",
        "jsonschema==4.23.0",
        "python-terraform==0.10.1",
        "rich==13.9.4",
        "ssh-config==0.1.5",
        "PyYAML==6.0.2",
        "boto3==1.37.23",
        "requests==2.32.3",
        "google-api-python-client==2.166.0"
]

[project.urls]
Documentation = "https://github.com/Wh1t3Fox/tempor"
Source = "https://github.com/Wh1t3Fox/tempor"

[project.scripts]
tempor = "tempor.__main__:main"
